# riskrate-backend

./: .env.test  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: alembic.ini  riskrate.db
src/alembic/: env.py
src/alembic/versions/: e669ada5d270_initial_migration_with_uuid.py
src/riskrate_backend/: __init__.py  main.py
src/riskrate_backend/api/v1/: address.py  auth.py  gpt_service_test.py
src/riskrate_backend/core/: database.py
src/riskrate_backend/core/auth/: token_provider.py
src/riskrate_backend/model/: base.py  companies.py  documents.py  models.py
src/riskrate_backend/schemas/: address.py  assignment_document.py  cloud_access.py  company.py  company_user.py  license.py  user.py
src/riskrate_backend/services/: gpt_model_service.py  pdf_service.py
src/tests/: conftest.py  test_address.py  test_company.py  test_license.py  test_user.py
